fix: design: dark mode adjustments (#1091)
* adjusts theme file to swap in light ulstrviolet colors in place of aurora colors in dark mode

* removes duplicate block from dark mode theme css variables and sets add widget text color to resovle color contrast issue

* adds dark mode styling for search bar

* adjusts dark mode styling on news articles pages

* adjusts breadcrumb colors to ulstviolet light

* switches logout button styling

* improves dark mode styling for shortcuts

* adjusts color of unstyled button hover in dark mode

* touches up the colors on the search bar in both themes

* adjusts bookmark hover styles in dark mode

* adjusts featured shortcuts hover styles

* changes active nav link background color

* fix typo

* adjusts ultraviolet light themed things in dark mode to ultraviolet muted

* lightens the tag on recent news item ti improve color contrast and align to new color scheme better

---------

--- a/src/components/EPubsCard/EPubsCard.module.scss
+++ b/src/components/EPubsCard/EPubsCard.module.scss
@@ -2,7 +2,7 @@
 @use 'styles/sfds/index.scss' as *;
 .epubs {
   background: var(--background-fill);
-  border: 1px solid $light-gray;
+  border: 1px solid var(--widget-border);
   border-radius: 8px;
   padding: units(2);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
