--- a/src/components/FeaturedShortcuts/FeaturedShortcuts.module.scss
+++ b/src/components/FeaturedShortcuts/FeaturedShortcuts.module.scss
@@ -18,6 +18,7 @@
   margin-left: -6px;
   margin-right: -6px;
   margin-bottom: 8px;
+  background: var(--widgets-bg);
   .featuredShortcutsItem {
     height: 100px;
     margin: 6px;
@@ -25,13 +26,18 @@
     font-size: 22px;
     line-height: normal;
     @include heading-book;
-
+    background: var(--shortcut-bg);
     font-weight: 500;
     list-style-type: none;
     border: 1px solid var(--shortcut-border);
     border-radius: 4px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
-    background-color: var(--widget-bg);
+
+    &:hover {
+      background-color: var(--shortcut-bg-hover);
+      border: 1px solid var(--shortcut-border-hover);
+      border-radius: 4px;
+    }
     :global {
       img {
         max-width: 67px;
@@ -45,10 +51,10 @@
         height: 100%;
         width: 100%;
         color: var(--text);
-        &:hover,
+        border-radius: 4px;
+        background-color: transparent;
         &:focus {
-          background: var(--shortcut-hover-bg);
-          border-radius: 4px;
+          background-color: var(--shortcut-bg-hover);
         }
       }
     }
